Fix JAVA_OPTS performance